--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Shin1x1\\Ddd\\": "packages/Shin1x1/Ddd/",
+            "Shin1x1\\TwiliojpOsaka\\": "packages/TwiliojpOsaka/"
         }
     },
     "autoload-dev": {
