--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ sudo: false
 php:
   - 5.6
 
+before_script:
+  - composer self-update
+  - cp .env.example .env
+
 script:
   - composer install --prefer-source --no-interaction --dev
   - ./vendor/bin/phpunit
