Add artisan key:generate task in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_script:
 
 script:
   - composer install --prefer-source --no-interaction --dev
+  - php artisan key:generate
   - ./vendor/bin/phpunit
