--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+TWILIO_ACCOUNT_SID=null
+TWILIO_AUTH_TOKEN=null
+TWILIO_TEL_NO=null
+
+TWILIO_RECEIVER1_TEL_NO=null
+TWILIO_RECEIVER1_NAME=null
