--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+/.phpstorm.meta.php
 /vendor
 /node_modules
 Homestead.yaml
 Homestead.json
 .env
+provision
+/_ide_helper.php
+/storage/database.sqlite
