--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+TWILIO_CREDENTIAL=user:pass
 TWILIO_ACCOUNT_SID=null
 TWILIO_AUTH_TOKEN=null
 TWILIO_TEL_NO=null
